force-app/main/default/objects/Survey_Response__c/fields/Are_you_Satisfied_with_the_service__c.field-meta.xml
<CustomField>
    <fullName>Are_you_Satisfied_with_the_service__c</fullName>
    <label>Are you Satisfied with the service?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>