force-app/main/default/objects/Survey_Response__c/fields/Will_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Will_Recommend__c</fullName>
    <label>Will Recommend to others?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Probably Yes</fullName>
            </value>
            <value>
                <fullName>Probably Not</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>